--- a/criteres.conf
+++ b/criteres.conf
@@ -1,7 +1,7 @@
 input { 
     file { 
         path => "/C:/Users/PC/Labs-2PBS.csv" 
-        start_position => début 
+        start_position => beginnning
     } 
 } 
 filter { 
